--- a/web/.env
+++ b/web/.env
@@ -1,3 +1,3 @@
-REACT_APP_AUTH_REDIRECT=http://localhost:3000/auth
+REACT_APP_AUTH_REDIRECT=http://localhost:3000/login
 REACT_APP_AUTH_CLIENT_ID=836990241263-n4dt1qna4khop5n9dnj3vj58edsofg71.apps.googleusercontent.com
 REACT_APP_BACKEND_URL=http://localhost:8000
