--- a/server/cmd/qq/.env
+++ b/server/cmd/qq/.env
@@ -3,3 +3,4 @@ JWT_SECRET="abc"
 AUTH_REDIRECT_URL="http://localhost:3000/login"
 AUTH_CLIENT_ID=836990241263-n4dt1qna4khop5n9dnj3vj58edsofg71.apps.googleusercontent.com
 AUTH_CLIENT_SECRET=${AUTH_CLIENT_SECRET}
+CORS_ALLOW_ORIGIN=http://localhost:3000
