--- a/web/prod.env
+++ b/web/prod.env
@@ -1,3 +1,3 @@
-REACT_APP_AUTH_REDIRECT=https://qq.maarten.dev/login
+REACT_APP_AUTH_REDIRECT=https://quizness.maarten.dev/login
 REACT_APP_AUTH_CLIENT_ID=836990241263-n4dt1qna4khop5n9dnj3vj58edsofg71.apps.googleusercontent.com
-REACT_APP_BACKEND_URL=https://qq.maarten.dev
+REACT_APP_BACKEND_URL=https://quizness.maarten.dev
