--- a/web/.eslintrc.json
+++ b/web/.eslintrc.json
@@ -27,6 +27,7 @@
         "@typescript-eslint/triple-slash-reference": "off",
         "react/react-in-jsx-scope": "off",
         "semi": "error",
-        "@typescript-eslint/consistent-type-imports": "off"
+        "@typescript-eslint/consistent-type-imports": "off",
+        "@typescript-eslint/space-before-function-paren": "off"
     }
 }
