--- a/web/.prettierrc
+++ b/web/.prettierrc
@@ -3,7 +3,5 @@
   "tabWidth": 2,
   "printWidth": 100,
   "singleQuote": true,
-  "trailingComma": "all",
-  "jsxSingleQuote": true,
-  "bracketSpacing": true
+  "trailingComma": "none"
 }
