--- a/server/cmd/qq/.env
+++ b/server/cmd/qq/.env
@@ -1,6 +1,7 @@
-DB_CONNECTION_STRING="host=localhost user=postgres password=rootroot dbname=qq"
+DB_CONNECTION_STRING="host=localhost user=quizness password=rootroot dbname=quizness"
 JWT_SECRET="abc"
 AUTH_REDIRECT_URL="http://localhost:3000/login"
 AUTH_CLIENT_ID=836990241263-n4dt1qna4khop5n9dnj3vj58edsofg71.apps.googleusercontent.com
 AUTH_CLIENT_SECRET=${AUTH_CLIENT_SECRET}
 CORS_ALLOW_ORIGIN=http://localhost:3000
+TRACING_ENDPOINT="http://localhost:14268/api/traces"
